# agk-cmake-template

./: .gitignore  CMakeLists.txt  Core.cpp  LICENSE  README.md
